--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -5,7 +5,7 @@
 }
 
 /* avatar */
-.message > .MuiSvgIcon-root {
+.message > .MuiAvatar-root {
   font-size: 36px;
   fill: white;
   border-radius: 4px;
