--- a/src/index.css
+++ b/src/index.css
@@ -148,3 +148,10 @@ code {
 body {
   font-family: 'Lato', sans-serif;
 }
+a,
+a:hover,
+a:active,
+a:visited,
+a:focus {
+  text-decoration: none;
+}
