--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -2,6 +2,11 @@
   display: flex;
   padding: 8px 20px;
   /* border-bottom: 1px solid rgba(0, 0, 0, 0.3); */
+  cursor: pointer;
+}
+
+.message:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 /* avatar */
@@ -36,10 +41,21 @@
   font-size: 12px;
   color: rgba(0, 0, 0, 0.6);
   font-weight: 600;
+  flex: 1;
 }
 
 .message-content {
   font-size: 15px;
   color: #1d1c1d;
   line-height: 20px;
+}
+
+.MuiSvgIcon-root.message-delete-btn {
+  font-size: 24px;
+  fill: var(--primary-color);
+  display: none;
+}
+
+.message:hover .MuiSvgIcon-root.message-delete-btn {
+  display: block;
 }
